# QuoteAI-MCP

./: README.md
QuoteAIMCP/: README.md  SETUP.md  pyproject.toml  requirements.txt
QuoteAIMCP/scripts/: run_hourly.py
QuoteAIMCP/src/quoteai_mcp/: __init__.py  config.py  email_client.py  erp_client.py  extractor.py  pipeline.py  schema.py  server.py
QuoteAIMCP/tests/: test_schema.py
